<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/favorite_full_heart"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_suggestions"
            android:icon="@drawable/suggestions_icon"
            android:title="@string/suggestions"/>
        <item
            android:id="@+id/nav_copyrights"
            android:icon="@drawable/copyrights_icon"
            android:title="@string/copyrights" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="About" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_icon"
            android:title="Exit" />
    </group>
</menu>